@@ -1,3 +1,8 @@
+Mon Feb  2 14:52:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Transport_Cache_Manager_T.cpp:
+          Fixed compile problems with GCC
+
 Mon Feb  2 14:42:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/ZIOP/ZIOP.cpp:
